# gingr

./: .travis.yml  CITATION  INSTALL.txt  Info.plist  LICENSE.txt  README  README.md  configure.ac  gavqt.pro  gingr.pro.in  moc_AlignmentView.cpp  moc_AnnotationView.cpp  moc_BlockView.cpp  moc_BlockViewMain.cpp  moc_BlockViewMap.cpp  moc_DrawingArea.cpp  moc_FilterControl.cpp  moc_LinkedSplitter.cpp  moc_MainWindow.cpp  moc_NameListView.cpp  moc_OptionButton.cpp  moc_OptionPanel.cpp  moc_PhylogenyTreeView.cpp  moc_PhylogenyTreeViewMain.cpp  moc_PhylogenyTreeViewMap.cpp  moc_RulerView.cpp  moc_SnpBuffer.cpp  moc_SnpWorker.cpp  moc_StatusBar.cpp  moc_TrackListView.cpp  resource.qrc
gavqt.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
gavqt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gavqt.xcodeproj/project.xcworkspace/xcuserdata/ondovb.xcuserdatad/: UserInterfaceState.xcuserstate
gavqt.xcodeproj/project.xcworkspace/xcuserdata/ondovb.xcuserdatad/xcdebugger/: Expressions.xcexplist
gavqt.xcodeproj/xcuserdata/ondovb.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
gavqt.xcodeproj/xcuserdata/ondovb.xcuserdatad/xcschemes/: gavqt 2.xcscheme  gavqt.xcscheme  xcschememanagement.plist
html/: index.html  main.html  menu.html  splash.html
img/: gingr.icns
src/: Alignment.cpp  Alignment.h  AlignmentView.cpp  AlignmentView.h  AnnotationView.cpp  AnnotationView.h  BaseBuffer.cpp  BaseBuffer.h  BaseImage.cpp  BaseImage.h  BlockStatusBar.cpp  BlockStatusBar.h  BlockView.cpp  BlockView.h  BlockViewMain.cpp  BlockViewMain.h  BlockViewMap.cpp  BlockViewMap.h  DrawingArea.cpp  DrawingArea.h  FileInput.cpp  FileInput.h  FilterControl.cpp  FilterControl.h  ImportWindow.cpp  ImportWindow.h  LcbView.cpp  LcbView.h  LinkedSplitter.cpp  LinkedSplitter.h  MainWindow.cpp  MainWindow.h  NameListView.cpp  NameListView.h  OptionButton.cpp  OptionButton.h  OptionPanel.cpp  OptionPanel.h  PhylogenyNode.cpp  PhylogenyNode.h  (+51 more)
